infra/rendered/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: motionmesh
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: motionmesh-worker
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 600
      tolerations:
      - key: "workload"
        operator: "Equal"
        value: "worker"
        effect: "NoSchedule"
      nodeSelector:
        NodeGroup: workers
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: worker
              topologyKey: kubernetes.io/hostname
      containers:
      - name: worker
        image: 425456324653.dkr.ecr.ap-south-1.amazonaws.com/motionmesh-worker:55eecd0
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
