infra/rendered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motionmesh-api-ingress
  namespace: motionmesh
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:718314448702:certificate/51564322-75a2-45bd-9d36-338554c0f367"
    alb.ingress.kubernetes.io/wafv2-acl-arn: ""
    alb.ingress.kubernetes.io/security-groups: "sg-03855397b14fd4d50"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: api.motionmesh.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
